--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+  <head>
+    <title>Welcome to my website!</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+  </body>
+</html>
+
