--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Intern At Norhtrop Grumman
+		      Intern At Northrop Grumman
 		    </p>
 		    <span class="date">Aug. 2018 - May. 2018</span>
 		  </li>
