--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	<br><br>
 	
 	<footer class="container">
-		<span style="font-size: 16px; margin-top: ">Other files: <a href="http://evanhoneysett.me/cv.pdf">PDF Resume</a> or <a href="">Transcript</a></span> <br> <br>
+		<span style="font-size: 16px; margin-top: ">Other files: <a href="http://evanhoneysett.com/cv.pdf">PDF Resume</a> or <a href="">Transcript</a></span> <br> <br>
 		<span style="font-size: 16px; margin-top: ">Website template from <a href="https://newtodesign.com/">here</a>.</span>
 	</footer>
 
